--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 创建时间：2020年10月24日22:35<br/>
 创建地址：山西省太原市雨桐网吧17号机<br/>
-<div>
+<div width="30%">
   金钱计划<br/>
   1、考证</br>
   注册电子工程师</br>
   专利代理资格证<br/>
+</div>
+
+<div width="30%">
+  解决问题<br/>
+  1、<link src="https://www.jianshu.com/p/958b17522d12">用GitHub Pages 快速搭建一个自己的网页</link>这是这个网页的起点
 </div>
