--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
 <h1>产品经理</h1>
   <button>
-    <link src="http://www.woshipm.com/">人人都是产品经理</link>
+    <a href="http://www.woshipm.com/">人人都是产品经理</a>
   </button>
 
   <button>
-    <link src="http://www.woshipm.com/">人人都是产品经理1</link>
+    <a href="http://www.woshipm.com/">人人都是产品经理32</a>
   </button>
 
   <button>
-    <link src="http://www.woshipm.com/">人人都是产品经理2</link>
+    <a href="http://www.woshipm.com/">人人都是产品经理23</a>
   </button>
 
   <button>
-    <link src="http://www.woshipm.com/">人人都是产品经理3</link>
+    <a href="http://www.woshipm.com/">人人都是产品经理12</a>
   </button>
